[package]
name = "owl"
version = "0.0.3"
authors = [ "Alex Eubanks <endeavor@rainbowsandpwnies.com>" ]
repository = "https://github.com/falconre/owl"
description = "ROP-gadget finder in Rust"
license = "Apache-2.0"
readme = "README.md"

[dependencies]
clap = "2.29.2"
error-chain = "0.11"
falcon_capstone = "0.2.1"
goblin = "0.0.14"
rayon = "0.9"

[lib]
name = "owl"
path = "lib/lib.rs"

[[bin]]
name = "owl-bin"
path = "src/main.rs"